--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -141,7 +141,7 @@
         <ListView
             android:id="@+id/livReceive"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>i
+            android:layout_height="match_parent"></ListView>
 
     </LinearLayout>
 
