--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -19,6 +19,7 @@
             android:id="@+id/imvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.6"
             android:src="@mipmap/ic_back" />
 
         <!--Title-->
@@ -26,7 +27,7 @@
             android:id="@+id/textHeader"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="50dp"
+            android:layout_weight="1"
             android:text="ประวัติการสั่งซื้อ"
             android:textColor="@color/textcolorPrimary"
             android:textSize="@dimen/txtH1"
@@ -36,10 +37,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_above="@+id/txtTotal"
-        android:layout_below="@+id/myToolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/txtTotal"
+        android:layout_below="@+id/myToolbar"
         android:orientation="vertical">
 
         <!--Content Ref And Date&Time-->
@@ -61,7 +62,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -75,13 +76,29 @@
                     android:textStyle="bold" />
 
                 <!--Time-->
-                <TextView
-                    android:id="@+id/txtTime"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="เวลา: 13:30"
-                    android:textSize="@dimen/h2"
-                    android:textStyle="italic" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txtCurrentTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="เวลาสั่ง : 13:00"
+                        android:textSize="@dimen/h2"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:id="@+id/txtTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="รับอาหาร : 13:30"
+                        android:textSize="@dimen/h2"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
@@ -105,7 +122,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.3"
-                android:text="NameFood"
+                android:text="ชื่ออาหาร"
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -147,11 +164,11 @@
 
     <!--Total-->
     <TextView
-        android:gravity="right"
-        android:layout_alignParentBottom="true"
         android:id="@+id/txtTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="right"
         android:text="ราคารวม: 1000 บาท"
         android:textSize="@dimen/h1"
         android:textStyle="bold" />
