--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kasembhundit.kutthareeya.thiti.manageres.StatusActivity">
 
-
-
+    <!--Toolbar-->
     <LinearLayout
-
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/imvIcon"
-            android:layout_width="@dimen/icon"
-            android:layout_height="@dimen/icon"
-            android:layout_margin="@dimen/padding20" />
-
-    </LinearLayout>
-
-    <LinearLayout
+        android:id="@+id/myToolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/padding20"
-        android:paddingRight="@dimen/padding20"
-        android:paddingTop="@dimen/padding20">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"
+        android:padding="@dimen/dp10">
 
-        <TextView
-            android:id="@+id/txtTitle"
+        <!--back-->
+        <ImageView
+            android:id="@+id/imvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="@dimen/h2"
+            android:layout_weight="0.6"
+            android:src="@mipmap/ic_back" />
+
+        <!--Title-->
+        <TextView
+            android:id="@+id/textHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="ประวัติการสั่งซื้อ"
+            android:textColor="@color/textcolorPrimary"
+            android:textSize="@dimen/txtH1"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/txtDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="detail ..."
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/h2"
-            android:textStyle="italic" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_below="@+id/myToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <!--ListView Show Order Ref-->
+        <ListView
+            android:id="@+id/livOrderRef"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
 
     </LinearLayout>
 
-    
-</LinearLayout>
+
+</RelativeLayout>
