--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -32,8 +32,7 @@
 
     </RelativeLayout>
 
-
-    <!--register-->
+    <!--Content-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -70,6 +69,7 @@
 
             <!--Input Pirce-->
             <EditText
+                android:maxLength="3"
                 android:id="@+id/edtprice"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
@@ -113,17 +113,6 @@
                 android:padding="20dp"></Spinner>
         </LinearLayout>
 
-        <!--topping-->
-        <EditText
-            android:id="@+id/edtname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ส่วนผสม"
-            android:inputType="text"
-            android:textColor="@color/colorPrimaryDark"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textSize="@dimen/dp25"
-            android:textStyle="bold" />
 
     </LinearLayout>
 
