--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -25,49 +25,101 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="ผู้ใข้งาน"
+            android:text="ผู้ใช้งาน"
             android:textColor="@color/textcolorPrimary"
             android:textSize="@dimen/h1"
             android:textStyle="bold" />
 
     </RelativeLayout>
 
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/realTop">
+    <!--manager-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/realTop"
+        android:orientation="vertical"
+        android:padding="@dimen/padding20">
 
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ชื่อผู้ใช้"
-        android:textSize="@dimen/txtH2"
-        android:textStyle="bold" />
+        <!--Username Surname-->
+        <LinearLayout
 
-    <ImageView
-    android:src="@mipmap/ic_authen"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ติดตามสถานะ"
-        android:textColor="@color/colortext"
-        android:textSize="@dimen/txtH2" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ออกจากระบบ"
-        android:textColor="@color/colortext"
-        android:textSize="@dimen/txtH2" />
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:padding="2dp"
+                android:src="@mipmap/ic_online" />
 
+            <TextView
+                android:id="@+id/txtUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:text="Thiti Thainiyom"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
 
-</LinearLayout>
+        <!--Add-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+
+            <ImageView
+                android:id="@+id/imvLastOrder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/addproduct" />
+
+            <TextView
+                android:id="@+id/txtLastOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp10"
+                android:text="การสั่งซื้อล่าสุด"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/txtH2" />
+
+        </LinearLayout>
+
+        <!--edit-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imvOrder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/addnews" />
+
+            <TextView
+                android:id="@+id/txtOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp10"
+                android:text="ประวัติการสั่งซื้อ"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/txtH2" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
 </RelativeLayout>
