--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    tools:context="kasembhundit.kutthareeya.thiti.manageres.addFoodActivity">
+    <!--Layout on top-->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/realTop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/padHeader">
+
+        <ImageView
+            android:layout_weight="0.1"
+            android:id="@+id/imvBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_back" />
+
+        <TextView
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:id="@+id/manage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="แก้ไขรายการอาหาร"
+            android:textColor="@color/textcolorPrimary"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+        <ListView
+            android:id="@+id/livEdtFood"
+            android:layout_below="@id/realTop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
