--- a/app/src/main/res/layout/edit_food_listview_layout.xml
+++ b/app/src/main/res/layout/edit_food_listview_layout.xml
@@ -16,7 +16,7 @@
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title"
+            android:text="Name Food"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/h2"
             android:textStyle="bold" />
